--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <div class="sub-cont">
+            <div class="header">
             <div class="logo">
                 <img src="./images/MineLogo-removebg-preview.png" alt="MyLogo">
             </div>
@@ -17,7 +18,14 @@
                     <li>
                         <a href="#">Home</a>
                     </li>
+                    <li>
+                        <a href="#">My Projects</a>
+                    </li>
+                    <li>
+                        <a href="#">Hire ME</a>
+                    </li>
                 </ul>
+            </div>
             </div>
         </div>
     </div>
