--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="sub-cont">
             <div class="header">
             <div class="logo">
-                <img src="./images/MineLogo-removebg-preview.png" alt="MyLogo">
+                <p>Header Logo</p>
             </div>
             <div class="navitems">
                 <ul class="navigate">
@@ -29,6 +29,17 @@
                     </li>
                 </ul>
             </div>
+            </div>
+            <div class="body-cont">
+                <div class="website">
+                    <p class="website-header">This website is <br>awesome</p>
+                    <p class="sub-header">this website has some subtext that goes here under the main title. It's a smaller font and the color lower contrast</p>
+                    <button class="sign">sign up </button>
+                </div>
+
+                <div class="place-holder">
+                    <p>this is placeholder for the images</p>
+                </div>
             </div>
         </div>
     </div>
