--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="body-cont">
                 <div class="website">
                     <p class="website-header">This website is <br>awesome</p>
-                    <p class="sub-header">this website has some subtext that goes here under the main title. It's a smaller font and the color lower contrast</p>
+                    <p class="sub-header">this website has some subtext that goes here under <br>the main title. It's a smaller font and the color lower <br>contrast</p>
                     <button class="sign">sign up </button>
                 </div>
 
