--- a/index.html
+++ b/index.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin | Landing Page</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="container">
-        <div class="sub-cont">
-            <div class="header">
-            <div class="logo">
-                <p>Header Logo</p>
-            </div>
-            <div class="navitems">
-                <ul class="navigate">
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">My Projects</a>
-                    </li>
-                    <li>
-                        <a href="#">Hire Me</a>
-                    </li>
-                </ul>
-            </div>
-            </div>
-            <div class="body-cont">
-                <div class="website">
-                    <p class="website-header">This website is <br>awesome</p>
-                    <p class="sub-header">this website has some subtext that goes here under <br>the main title. It's a smaller font and the color lower <br>contrast</p>
-                    <button class="sign">sign up </button>
-                </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Odin | Landing Page</title>
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+			rel="stylesheet" />
+	</head>
+	<body>
+		<div class="container">
+			<div class="sub-cont">
+				<div class="header">
+					<div class="logo">
+						<p>Header Logo</p>
+					</div>
+					<div class="navitems">
+						<ul class="navigate">
+							<li>
+								<a href="#">Home</a>
+							</li>
+							<li>
+								<a href="#">My Projects</a>
+							</li>
+							<li>
+								<a href="#">Hire Me</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="body-cont">
+					<div class="website">
+						<p class="website-header">This website is <br />awesome</p>
+						<p class="sub-header">
+							this website has some subtext that goes here under <br />the main
+							title. It's a smaller font and the color lower <br />contrast
+						</p>
+						<button class="sign">sign up</button>
+					</div>
 
-                <div class="place-holder">
-                    <p>this is placeholder for the images</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
+					<div class="place-holder">
+						<p>this is placeholder for the images</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
