--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@
 					</div>
 
 					<div class="place-holder">
-						<p>this is placeholder for the images</p>
+						<p class="holder">this is placeholder for the images</p>
 					</div>
 				</div>
 			</div>
+            <div class="middle-cont">
+                <div class="random">
+                    <p class="info-random">Some Random Information</p>
+                </div>
+            </div>
 		</div>
 	</body>
 </html>
