--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
                 <div class="random">
                     <p class="info-random">Some Random Information</p>
                 </div>
+                <div class="subtext">
+                    <div class="subtext1">
+                        <img src="./images/image.PNG" alt="">
+                        <p>this is some subtext<br>under an illustration <br> or image</p>
+                    </div>
+                    <div class="subtext2">
+                        <img src="./images/image.PNG" alt="">
+                        <p>this is some subtext<br>under an illustration <br> or image</p>
+                    </div>
+                    <div class="subtext3">
+                        <img src="./images/image.PNG" alt="">
+                        <p>this is some subtext<br>under an illustration <br> or image</p>
+                    </div>
+                    <div class="subtext4">
+                        <img src="./images/image.PNG" alt="">
+                        <p>this is some subtext<br>under an illustration <br> or image</p>
+                    </div>
+                </div>
             </div>
 		</div>
 	</body>
