--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
                 </div>
                 <div class="subtext">
                     <div class="subtext1">
-                        <img src="./images/image.PNG" alt="">
+                        <img src="./images/image.PNG" alt="" class="random-image">
                         <p>this is some subtext<br>under an illustration <br> or image</p>
                     </div>
                     <div class="subtext2">
-                        <img src="./images/image.PNG" alt="">
+                        <img src="./images/image.PNG" alt="" class="random-image">
                         <p>this is some subtext<br>under an illustration <br> or image</p>
                     </div>
                     <div class="subtext3">
-                        <img src="./images/image.PNG" alt="">
+                        <img src="./images/image.PNG" alt="" class="random-image">
                         <p>this is some subtext<br>under an illustration <br> or image</p>
                     </div>
                     <div class="subtext4">
-                        <img src="./images/image.PNG" alt="">
+                        <img src="./images/image.PNG" alt="" class="random-image">
                         <p>this is some subtext<br>under an illustration <br> or image</p>
                     </div>
                 </div>
