--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                     </div>
                 </div>
             </div>
+            <div class="thunder">
+                <p class="inspire">This is an Inspiring quote, or a testimonial from a customer. May be it's just fillinf up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <div class="gud">-Thor, God of Thunder</div>
+            </div>
 		</div>
 	</body>
 </html>
