--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 </div>
             </div>
             <div class="thunder">
-                <p class="inspire">This is an Inspiring quote, or a testimonial from a customer. May be it's just fillinf up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-                <div class="gud">-Thor, God of Thunder</div>
+                <p class="inspire quotes">This is an Inspiring quote, or a testimonial from a<br> customer. May be it's just fillinf up space, or maybe<br> people will actually read it. Who knows? All I know <br> is that it looks nice.</p>
+                <p class="gud">-Thor, God of Thunder</p>
             </div>
 		</div>
 	</body>
