--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
                 <p class="inspire quotes">This is an Inspiring quote, or a testimonial from a<br> customer. May be it's just fillinf up space, or maybe<br> people will actually read it. Who knows? All I know <br> is that it looks nice.</p>
                 <p class="gud">-Thor, God of Thunder</p>
             </div>
+            <div class="call">
+                <div class="call-container">
+                    <div class="call-action">
+                        <p>Call to action! It's time!</p>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <div class="sign-up">
+                        <button class="signup">Sign up</button>
+                    </div>
+                </div>
+            </div>
 		</div>
 	</body>
 </html>
