--- a/index.html
+++ b/index.html
@@ -47,46 +47,63 @@
 					</div>
 				</div>
 			</div>
-            <div class="middle-cont">
-                <div class="random">
-                    <p class="info-random">Some Random Information</p>
-                </div>
-                <div class="subtext">
-                    <div class="subtext1">
-                        <img src="./images/image.PNG" alt="" class="random-image">
-                        <p>this is some subtext<br>under an illustration <br> or image</p>
-                    </div>
-                    <div class="subtext1">
-                        <img src="./images/image.PNG" alt="" class="random-image">
-                        <p>this is some subtext<br>under an illustration <br> or image</p>
-                    </div>
-                    <div class="subtext1">
-                        <img src="./images/image.PNG" alt="" class="random-image">
-                        <p>this is some subtext<br>under an illustration <br> or image</p>
-                    </div>
-                    <div class="subtext1">
-                        <img src="./images/image.PNG" alt="" class="random-image">
-                        <p>this is some subtext<br>under an illustration <br> or image</p>
-                    </div>
-                </div>
-            </div>
-            <div class="thunder">
-                <p class="inspire quotes">This is an Inspiring quote, or a testimonial from a<br> customer. May be it's just fillinf up space, or maybe<br> people will actually read it. Who knows? All I know <br> is that it looks nice.</p>
-                <p class="gud">-Thor, God of Thunder</p>
-            </div>
-            <div class="call">
-                <div class="call-container">
-                    <div class="call-action">
-                        <p>Call to action! It's time!</p>
-                        <p>Sign up for our product by clicking that button right over there!</p>
-                    </div>
-                    <div class="sign-up">
-                        <button class="signup">Sign up</button>
-                    </div>
-                </div>
-            </div>
+			<div class="middle-cont">
+				<div class="random">
+					<p class="info-random">Some Random Information</p>
+				</div>
+				<div class="subtext">
+					<div class="subtext1">
+						<img src="./images/image.PNG" alt="" class="random-image" />
+						<p>
+							this is some subtext<br />under an illustration <br />
+							or image
+						</p>
+					</div>
+					<div class="subtext1">
+						<img src="./images/image.PNG" alt="" class="random-image" />
+						<p>
+							this is some subtext<br />under an illustration <br />
+							or image
+						</p>
+					</div>
+					<div class="subtext1">
+						<img src="./images/image.PNG" alt="" class="random-image" />
+						<p>
+							this is some subtext<br />under an illustration <br />
+							or image
+						</p>
+					</div>
+					<div class="subtext1">
+						<img src="./images/image.PNG" alt="" class="random-image" />
+						<p>
+							this is some subtext<br />under an illustration <br />
+							or image
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="thunder">
+				<p class="inspire quotes">
+					This is an Inspiring quote, or a testimonial from a<br />
+					customer. May be it's just fillinf up space, or maybe<br />
+					people will actually read it. Who knows? All I know <br />
+					is that it looks nice.
+				</p>
+				<p class="gud">-Thor, God of Thunder</p>
+			</div>
+			<div class="call">
+				<div class="call-container">
+					<div class="call-action">
+						<p class="action">Call to action! It's time!</p>
+						<p>
+							Sign up for our product by clicking that button right over there!
+						</p>
+					</div>
+					<div class="sign-up">
+						<button class="signup">Sign up</button>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
-
-
