--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<div class="call-container">
 					<div class="call-action">
 						<p class="action">Call to action! It's time!</p>
-						<p>
+						<p class="up">
 							Sign up for our product by clicking that button right over there!
 						</p>
 					</div>
