added css for footer

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<div class="call-action">
 						<p class="action">Call to action! It's time!</p>
 						<p class="up">
-							Sign up for our product by clicking that button right over there!
+							<a href="">Sign up for our product by clicking that button right over there!</a>
 						</p>
 					</div>
 					<div class="sign-up">
@@ -104,6 +104,9 @@
 					</div>
 				</div>
 			</div>
+            <div class="footer">
+                <p class="copyright">Copyright @ The Odin Project 2023</p>
+            </div>
 		</div>
 	</body>
 </html>
