added css for footer

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				</div>
 			</div>
             <div class="footer">
-                <p class="copyright">Copyright @ The Odin Project 2023</p>
+                <p class="copyright">Copyright &#xA9; The Odin Project 2023</p>
             </div>
 		</div>
 	</body>
