--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							this website has some subtext that goes here under <br />the main
 							title. It's a smaller font and the color lower <br />contrast
 						</p>
-						<button class="sign">sign up</button>
+						<button class="sign">Sign up</button>
 					</div>
 
 					<div class="place-holder">
