--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 				<div class="body-cont">
 					<div class="website">
-						<p class="website-header">This website is <br />awesome</p>
+						<p class="website-header">Emmanuel <br />IRUMVA</p>
 						<p class="sub-header">
 							this website has some subtext that goes here under <br />the main
 							title. It's a smaller font and the color lower <br />contrast
@@ -49,32 +49,45 @@
 			</div>
 			<div class="middle-cont">
 				<div class="random">
-					<p class="info-random">Some Random Information</p>
+					<p class="info-random">My Experience</p>
 				</div>
 				<div class="subtext">
 					<div class="subtext1">
-						<img src="./images/image.PNG" alt="" class="random-image" />
+						<img
+							src="./images/pexels-realtoughcandycom-11035380.jpg"
+							alt=""
+							class="random-image" />
+						<p>
+							Node.js is a server-side JavaScript runtime that allows
+							<br />developers to build scalable and efficient web applications.
+						</p>
+					</div>
+					<div class="subtext1">
+						<img
+							src="./images/pexels-realtoughcandycom-11035363.jpg"
+							alt=""
+							class="random-image" />
+						<p>
+							JSON (JavaScript Object Notation) is a lightweight data
+							interchange <br /> format widely used for transmitting and storing
+							structured data.
+						</p>
+					</div>
+					<div class="subtext1">
+						<img
+							src="./images/javascript-illustration.png"
+							alt=""
+							class="random-image" />
 						<p>
 							this is some subtext<br />under an illustration <br />
 							or image
 						</p>
 					</div>
 					<div class="subtext1">
-						<img src="./images/image.PNG" alt="" class="random-image" />
-						<p>
-							this is some subtext<br />under an illustration <br />
-							or image
-						</p>
-					</div>
-					<div class="subtext1">
-						<img src="./images/image.PNG" alt="" class="random-image" />
-						<p>
-							this is some subtext<br />under an illustration <br />
-							or image
-						</p>
-					</div>
-					<div class="subtext1">
-						<img src="./images/image.PNG" alt="" class="random-image" />
+						<img
+							src="./images/pexels-luis-gomes-546819.jpg"
+							alt=""
+							class="random-image" />
 						<p>
 							this is some subtext<br />under an illustration <br />
 							or image
@@ -96,7 +109,10 @@
 					<div class="call-action">
 						<p class="action">Call to action! It's time!</p>
 						<p class="up">
-							<a href="">Sign up for our product by clicking that button right over there!</a>
+							<a href=""
+								>Sign up for our product by clicking that button right over
+								there!</a
+							>
 						</p>
 					</div>
 					<div class="sign-up">
@@ -104,9 +120,9 @@
 					</div>
 				</div>
 			</div>
-            <div class="footer">
-                <p class="copyright">Copyright &#xA9; The Odin Project 2023</p>
-            </div>
+			<div class="footer">
+				<p class="copyright">Copyright &#xA9; The Odin Project 2023</p>
+			</div>
 		</div>
 	</body>
 </html>
