--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 							class="random-image" />
 						<p>
 							JSON (JavaScript Object Notation) is a lightweight data
-							interchange <br /> format widely used for transmitting and storing
-							structured data.
+							<br />interchange format widely used for transmitting.
 						</p>
 					</div>
 					<div class="subtext1">
@@ -79,8 +78,8 @@
 							alt=""
 							class="random-image" />
 						<p>
-							this is some subtext<br />under an illustration <br />
-							or image
+							JavaScript is a versatile <br />programming language primarily used for
+							building interactive web applications. 
 						</p>
 					</div>
 					<div class="subtext1">
