--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</div>
 
 					<div class="place-holder">
-						<p class="holder">this is placeholder for the images</p>
+						<img src="./images/profile-pic (1).png" alt="profile" height="300rem">
 					</div>
 				</div>
 			</div>
@@ -78,8 +78,8 @@
 							alt=""
 							class="random-image" />
 						<p>
-							JavaScript is a versatile <br />programming language primarily used for
-							building interactive web applications. 
+							JavaScript is a versatile <br />programming language primarily
+							used for building interactive web applications.
 						</p>
 					</div>
 					<div class="subtext1">
@@ -88,8 +88,8 @@
 							alt=""
 							class="random-image" />
 						<p>
-							this is some subtext<br />under an illustration <br />
-							or image
+							Express.js is a popular web application framework for Node.js that
+							simplifies the development of server-side.
 						</p>
 					</div>
 				</div>
