--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</div>
 
 					<div class="place-holder">
-						<img src="./images/profile-pic (1).png" alt="profile" height="300rem">
+						<img src="./images/profile-pic-removebg (1).png" alt="profile" height="300rem">
 					</div>
 				</div>
 			</div>
